First changes build

--- a/app/globals.css
+++ b/app/globals.css
@@ -59,3 +59,168 @@
       @apply bg-background text-foreground;
     }
   }
+
+  #divv{
+    --section-max-width: 9999px;
+    --one-unit: 1cqw;
+    --wst-button-color-fill-primary: rgb(var(--color_48));
+    --wst-button-color-border-primary: rgb(var(--color_49));
+    --wst-button-color-text-primary: rgb(var(--color_50));
+    --wst-button-color-fill-primary-hover: rgb(var(--color_51));
+    --wst-button-color-border-primary-hover: rgb(var(--color_52));
+    --wst-button-color-text-primary-hover: rgb(var(--color_53));
+    --wst-button-color-fill-primary-disabled: rgb(var(--color_54));
+    --wst-button-color-border-primary-disabled: rgb(var(--color_55));
+    --wst-button-color-text-primary-disabled: rgb(var(--color_56));
+    --wst-button-color-fill-secondary: rgb(var(--color_57));
+    --wst-button-color-border-secondary: rgb(var(--color_58));
+    --wst-button-color-text-secondary: rgb(var(--color_59));
+    --wst-button-color-fill-secondary-hover: rgb(var(--color_60));
+    --wst-button-color-border-secondary-hover: rgb(var(--color_61));
+    --wst-button-color-text-secondary-hover: rgb(var(--color_62));
+    --wst-button-color-fill-secondary-disabled: rgb(var(--color_63));
+    --wst-button-color-border-secondary-disabled: rgb(var(--color_64));
+    --wst-button-color-text-secondary-disabled: rgb(var(--color_65));
+    --wst-color-fill-base-1: rgb(var(--color_36));
+    --wst-color-fill-base-2: rgb(var(--color_37));
+    --wst-color-fill-base-shade-1: rgb(var(--color_38));
+    --wst-color-fill-base-shade-2: rgb(var(--color_39));
+    --wst-color-fill-base-shade-3: rgb(var(--color_40));
+    --wst-color-fill-accent-1: rgb(var(--color_41));
+    --wst-color-fill-accent-2: rgb(var(--color_42));
+    --wst-color-fill-accent-3: rgb(var(--color_43));
+    --wst-color-fill-accent-4: rgb(var(--color_44));
+    --wst-color-fill-background-primary: rgb(var(--color_11));
+    --wst-color-fill-background-secondary: rgb(var(--color_12));
+    --wst-color-text-primary: rgb(var(--color_15));
+    --wst-color-text-secondary: rgb(var(--color_14));
+    --wst-color-action: rgb(var(--color_18));
+    --wst-color-disabled: rgb(var(--color_39));
+    --wst-color-title: rgb(var(--color_45));
+    --wst-color-subtitle: rgb(var(--color_46));
+    --wst-color-line: rgb(var(--color_47));
+    --wst-font-style-h2: var(--font_2);
+    --wst-font-style-h3: var(--font_3);
+    --wst-font-style-h4: var(--font_4);
+    --wst-font-style-h5: var(--font_5);
+    --wst-font-style-h6: var(--font_6);
+    --wst-font-style-body-large: var(--font_7);
+    --wst-font-style-body-medium: var(--font_8);
+    --wst-font-style-body-small: var(--font_9);
+    --wst-font-style-body-x-small: var(--font_10);
+    --color_0: 255,255,255;
+    --color_1: 255,255,255;
+    --color_2: 0,0,0;
+    --color_3: 237,28,36;
+    --color_4: 0,136,203;
+    --color_5: 255,203,5;
+    --color_6: 114,114,114;
+    --color_7: 176,176,176;
+    --color_8: 255,255,255;
+    --color_9: 114,114,114;
+    --color_10: 176,176,176;
+    --color_11: 255,255,255;
+    --color_12: 232,230,230;
+    --color_13: 199,199,199;
+    --color_14: 117,117,117;
+    --color_15: 0,0,0;
+    --color_16: 175,172,251;
+    --color_17: 135,130,246;
+    --color_18: 23,13,242;
+    --color_19: 15,9,161;
+    --color_20: 8,4,81;
+    --color_21: 255,235,255;
+    --color_22: 255,214,255;
+    --color_23: 255,173,255;
+    --color_24: 128,87,128;
+    --color_25: 64,43,64;
+    --color_26: 254,242,174;
+    --color_27: 254,235,133;
+    --color_28: 253,216,13;
+    --color_29: 169,144,9;
+    --color_30: 84,72,4;
+    --color_31: 254,196,178;
+    --color_32: 253,166,140;
+    --color_33: 252,78,26;
+    --color_34: 168,52,17;
+    --color_35: 84,26,9;
+    --color_36: 255,255,255;
+    --color_37: 0,0,0;
+    --color_38: 232,230,230;
+    --color_39: 199,199,199;
+    --color_40: 117,117,117;
+    --color_41: 23,13,242;
+    --color_42: 0,0,0;
+    --color_43: 199,199,199;
+    --color_44: 255,255,255;
+    --color_45: 0,0,0;
+    --color_46: 0,0,0;
+    --color_47: 232,230,230;
+    --color_48: 23,13,242;
+    --color_49: 23,13,242;
+    --color_50: 255,255,255;
+    --color_51: 255,255,255;
+    --color_52: 23,13,242;
+    --color_53: 23,13,242;
+    --color_54: 199,199,199;
+    --color_55: 199,199,199;
+    --color_56: 255,255,255;
+    --color_57: 255,255,255;
+    --color_58: 23,13,242;
+    --color_59: 255,255,255;
+    --color_60: 23,13,242;
+    --color_61: 23,13,242;
+    --color_62: 255,255,255;
+    --color_63: 255,255,255;
+    --color_64: 199,199,199;
+    --color_65: 199,199,199;
+    --font_0: normal normal normal 80px/1.4em helvetica-w01-light,helvetica-w02-light,sans-serif;
+    --font_1: normal normal normal 16px/1.4em din-next-w01-light,din-next-w02-light,din-next-w10-light,sans-serif;
+    --font_2: normal normal normal 44px/1.4em helvetica-w01-light,helvetica-w02-light,sans-serif;
+    --font_3: normal normal normal 30px/1.4em helvetica-w01-light,helvetica-w02-light,sans-serif;
+    --font_4: normal normal normal 26px/1.4em helvetica-w01-light,helvetica-w02-light,sans-serif;
+    --font_5: normal normal normal 22px/1.4em helvetica-w01-roman,helvetica-w02-roman,helvetica-lt-w10-roman,sans-serif;
+    --font_6: normal normal normal 18px/1.4em helvetica-w01-light,helvetica-w02-light,sans-serif;
+    --font_7: normal normal normal 24px/1.4em helvetica-w01-light,helvetica-w02-light,sans-serif;
+    --font_8: normal normal normal 20px/1.4em helvetica-w01-light,helvetica-w02-light,sans-serif;
+    --font_9: normal normal normal 16px/1.4em helvetica-w01-light,helvetica-w02-light,sans-serif;
+    --font_10: normal normal normal 12px/1.4em din-next-w01-light,din-next-w02-light,din-next-w10-light,sans-serif;
+    --wix-ads-height: 0px;
+    --sticky-offset: 0px;
+    --wix-ads-top-height: 0px;
+    --vh-unit: calc( (100vh - 0px) / 100);
+    --site-width: 980px;
+    --above-all-z-index: 100000;
+    --portals-z-index: 100001;
+    -webkit-font-smoothing: antialiased;
+    --minViewportSize: 320;
+    --maxViewportSize: 1920;
+    --theme-spx-ratio: 1px;
+    --scrollbar-width: 0px;
+    font-family: Arial,Helvetica,sans-serif;
+    font-size: 10px;
+    --pinned-layers-in-page: 0;
+    --top-offset: 0px;
+    --header-height: 106px;
+    --pinned-layer-in-container: 51;
+    --above-all-in-container: 49;
+    --transition-duration: 700ms;
+    --bg-overlay-color: rgb(0, 84, 180);
+    --bg-gradient: none;
+    pointer-events: auto;
+    --stroke-width: 0;
+    --fill-opacity: 1;
+    --stroke: #000000;
+    --stroke-opacity: 1;
+    --fill: #00A6FF;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    fill: var(--fill);
+    fill-opacity: var(--fill-opacity);
+    stroke: var(--stroke);
+    stroke-opacity: var(--stroke-opacity);
+    stroke-width: var(--stroke-width);
+    fill-rule: evenodd;
+    clip-rule: evenodd;
+    d: path("M 162.989 102.465 l 1.721 -2.77 c 5.894 -9.482 2.985 -21.947 -6.497 -27.842 l -2.769 -1.721 a 20.218 20.218 0 0 1 -9.015 -12.576 l -0.741 -3.176 c -2.537 -10.873 -13.408 -17.631 -24.282 -15.094 l -3.175 0.741 a 20.218 20.218 0 0 1 -15.267 -2.518 l -2.769 -1.721 c -9.483 -5.894 -21.948 -2.986 -27.842 6.497 l -1.721 2.769 a 20.218 20.218 0 0 1 -12.576 9.015 l -3.175 0.741 c -10.872 2.538 -17.63 13.41 -15.093 24.283 l 0.741 3.175 a 20.218 20.218 0 0 1 -2.518 15.267 l -1.721 2.769 c -5.894 9.482 -2.986 21.948 6.497 27.842 l 2.769 1.721 a 20.218 20.218 0 0 1 9.015 12.576 l 0.741 3.175 c 2.537 10.873 13.408 17.631 24.282 15.094 l 3.174 -0.741 a 20.218 20.218 0 0 1 15.267 2.518 l 2.77 1.722 c 9.483 5.894 21.948 2.985 27.842 -6.497 l 1.721 -2.769 a 20.214 20.214 0 0 1 12.576 -9.015 l 3.175 -0.741 c 10.873 -2.537 17.631 -13.408 15.094 -24.282 l -0.741 -3.175 a 20.217 20.217 0 0 1 2.517 -15.267 Z");
+    vector-effect: non-scaling-stroke;
+  }
